Update Day 1 (22.01.31).md

--- a/Day 1 (22.01.31).md
+++ b/Day 1 (22.01.31).md
@@ -8,3 +8,6 @@
 * TDD: 테스트 주도 개발, 개발 방법론
 * react-notion-x: react 라이브러리
 * useProvide: react hook
+
+## video
+https://www.youtube.com/watch?v=gQq0839tjyo
