--- a/Day 007 (22.02.06).md
+++ b/Day 007 (22.02.06).md
@@ -1,3 +1,12 @@
 # Opize Develop 007
+* /project, /product 테스트 코드 작성 완료
 
-WIP
+## TODO
+### TODAY
+- [ ] /project 백엔드 완성
+- [ ] /product 백엔드 완성
+- [ ] 컬러 팔레트 정리
+
+### LATER
+- [ ] 프론트엔드
+- [ ] 운영자 페이지 디자인
