Update Day 007 (22.02.06).md

--- a/Day 007 (22.02.06).md
+++ b/Day 007 (22.02.06).md
@@ -1,5 +1,7 @@
 # Opize Develop 007
 * /project, /product 테스트 코드 작성 완료
+* /project 코드 작성완료
+* product 생성(POST /project/{projectId}/product) 코드 완성
 
 ## TODO
 ### TODAY
