Update Day 008 (22.02.08).md

--- a/Day 008 (22.02.08).md
+++ b/Day 008 (22.02.08).md
@@ -3,3 +3,7 @@
 * 새로운 색상 팔레트 
 
 ![image](https://user-images.githubusercontent.com/46562466/153010316-b7232655-14ba-40e9-bc09-0257234e69cc.png)
+
+
+## comment
+학교생활기록부 마감으로 인해 어제(22.02.09)는 개발을 하지 못했음
