Update Day 008 (22.02.08).md

--- a/Day 008 (22.02.08).md
+++ b/Day 008 (22.02.08).md
@@ -1,8 +1,11 @@
 # Opize Develop recode
 * 백엔드 product 관련 코드 완성
 * 새로운 색상 팔레트 
+* 프론트엔드 CSS 변수 작업중
 
 ![image](https://user-images.githubusercontent.com/46562466/153010316-b7232655-14ba-40e9-bc09-0257234e69cc.png)
+![image](https://user-images.githubusercontent.com/46562466/153039493-2846a743-fa69-4706-8bdf-5e77605aa0c6.png)
+![image](https://user-images.githubusercontent.com/46562466/153039562-3991d5b4-74e8-43c7-b0f4-a7fa5b35a608.png)
 
 
 ## comment
