--- a/Day 011 (22.02.12).md
+++ b/Day 011 (22.02.12).md
@@ -1,1 +1,20 @@
 # Opize Develop Recode
+|사진|내용|
+|-|-|
+|![image](https://media.discordapp.net/attachments/761930839893606400/942118289331593306/unknown.png)|Admin 페이지 상품 리스트 페이지 제작 |
+|![image](https://media.discordapp.net/attachments/761930839893606400/942119382698573825/unknown.png)|Admin 페이지 상품 생성 페이지 제작 |
+|![image](https://media.discordapp.net/attachments/761930839893606400/942118834482053140/unknown.png)|Admin 페이지 상품 편집 페이지 제작 |
+|![image](https://media.discordapp.net/attachments/761930839893606400/942119561166205008/unknown.png)|Admin 페이지 유저 디테일 페이지 수정 |
+|![image](https://media.discordapp.net/attachments/761930839893606400/942119714371543150/unknown.png)|Admin 페이지 테스트 구독 페이지 제작 |
+|![image](https://media.discordapp.net/attachments/761930839893606400/942119860362690621/unknown.png)![image](https://media.discordapp.net/attachments/761930839893606400/942119997097001000/unknown.png)|현재 구독 정보 -> 일시정지, 재구독 |
+
+https://youtu.be/cFM9-lfTdEc
+
+# small Talk
+벌써 Opize의 핵심 기능은 대부분 만든 것 같습니다. 이제 결제 로그 부분만 작업하면 핵심 기능은 대부분 완성일 것 같습니다. 물론 핵심 기능의 완성이 바로 출시로 이어지지는 않습니다. 아직 관리자 페이지 부분이 남기도 했고 대시보드 쪽도 손 볼 것들이 많네요...
+
+이번 방학 중으로 완성해서 베타를 시작하는 게 목표라 최대한 빨리 작업하고 있습니다. 다만 이제 개학이 얼마 남지 않은지라 남은 기간에 공부를 해야 되서 개발이 조금 늦어질 수는 있을 것 같습니다. 지금도 하루에 8시간 가량을 개발에만 쏟고 있는데 공부를 많이 못해서 걱정이네요...
+
+이제 슬슬 플랫폼 개발 말고도 안에 들어갈 서비스를 고민해야 되겠네요. 원래 Opize는 노션을 위한 서비스로 생각을 하긴 했지만, 조금 더 나아가서 생산성을 위한 플랫폼으로 만들고자 하는 욕심이 있습니다.
+
+아 그리고 이번에 Notion Korea에서 공식 디스코드를 만들었습니다. 운 좋게 서버 빌더로 참여해서 여러가지 세팅했네요. 제 첫 개발도 디스코드에서 했고, 지금도 Opize와 Calednar2notion의 관리를 디스코드로 하고 있기 때문에 굉장히 익숙한 환경이라 너무 좋습니다. 근데 어려워 하시는 분들도 계시더라고요... 아마 새로운 메신저에 처음 만나서 어려운 것 같습니다. (지극히 단순한 카카오톡에 비하면 상대적으로 조금은 복잡해보이긴 하네요.
