Update Day 012 (22.02.13).md

--- a/Day 012 (22.02.13).md
+++ b/Day 012 (22.02.13).md
@@ -1,3 +1,7 @@
+# Opize Develop Recode
+
+## 개발일지 & 변경사항
 https://velog.io/@phw3071/Opize-%EA%B0%9C%EB%B0%9C-%EC%9D%BC%EC%A7%80-Day-12
 
+## 유튜브
 https://youtu.be/gJTohnsyV3M
