Update Day 012 (22.02.13).md

--- a/Day 012 (22.02.13).md
+++ b/Day 012 (22.02.13).md
@@ -1,7 +1,22 @@
 # Opize Develop Recode
 
-## 개발일지 & 변경사항
 https://velog.io/@phw3071/Opize-%EA%B0%9C%EB%B0%9C-%EC%9D%BC%EC%A7%80-Day-12
 
-## 유튜브
-https://youtu.be/gJTohnsyV3M
+개발 일지 동영상 : https://youtu.be/gJTohnsyV3M
+
+이번 영상부터는 마이크를 추가해서 녹화를 했습니다. 이것저것 잡다한 이야기도 했으니 들어보셔도 좋을 것 같아요.
+
+# 개발한 것들
+|사진|설명|
+|-|-|
+|![](https://images.velog.io/images/phw3071/post/b6abcbb6-1aae-4235-a3b3-d31b4d81d3a3/image.png)|단품 결제 + Codeblock 컴포넌트 하단 링크 추가|
+|![](https://images.velog.io/images/phw3071/post/4dceaa23-3c4f-48a0-bca9-57d84518f4b6/image.png)|결제 페이지 추가|
+|![](https://images.velog.io/images/phw3071/post/1a8a240a-ba5d-414f-a501-5030296ce237/image.png)|결제 기록 페이지 추가|
+|![](https://images.velog.io/images/phw3071/post/7f34a525-9cb9-4887-bee2-286a6faa4c19/image.png)|결제 취소 기능 추가|
+
+# 기타
+드디어 웹사이트가 슬슬 완성되어 가는 것 같습니다. 기본적인 플랜/단품 결제 기능이랑 결제 취소, 결제 기록까지 만들었네요. 이제 쿠폰이랑 프로모션이랑 페이지맵이랑 대시보드 등등을 만들고 로깅도 처리하고 에러 처리도 강화하고 버그까지 잡으면 드디어 본격적인 프로젝트를 만들 수 있을 것 같습니다. (아직 갈 길이 머네요...)
+
+최근에 Storybook라는 걸 알게 되었는데 굉장히 흥미롭더라고요. 컴포넌트를 별도로 관리할 수 있는 시스템이라는 건데 이번 서비스에 적용하면 좋겠다는 생각이 듭니다. 물론 오늘 적용시켜볼려고 설치해봤는데. 아뿔싸 별도의 레포지토리에 세팅해야 되는 건데 기존 프론트엔드에 그대로 설치해버려서 바벨과 웹팩에서 오류를 뿜어내던걸 잡느라 힘들었습니다. (혹시 저 같은 사람이 있을까봐 조언을 드리자면, package.json의 개발 종속성 쪽에서 storybook 관련 라이브러리 없애고, node-moudle 폴더랑 yarn.lock 파일 없애고 다시 설치하시면 됩니다)
+
+아 그리고, 저번에 어떤 분이 제 개발 스토리가 궁금하다고 하셔서 그것도 지금 작성중입니다. 스토리가 조금 장황해서 오래걸릴 수는 있는데 조금 양해를 부탁드립니다.
